# rs-columar

./: .gitignore  Cargo.toml
columnar/: Cargo.toml  build.rs  build_backup.rs
columnar/src/: columnar.rs  example.rs  into_col.rs  lib.rs
columnar/src/buffers/: buffer_pool.rs  smart_pool.rs
columnar/src/encoding/: delta.rs  factory.rs  fixed_width.rs  mod.rs  streaming.rs
columnar/src/encoding/bitpack/v1/: bitpack_tests.rs  common.rs  mod.rs  page_reader.rs  reader.rs  stream_writer.rs  writer.rs  writer_pair.rs
columnar/src/encoding/strings/: doc_reader.rs  doc_stream_reader.rs  doc_stream_writer.rs  doc_writer.rs  mod.rs  writer.rs
columnar/src/encoding/strings/tokenizer/: mod.rs
columnar/src/indexing/: categorical.rs
columnar/src/models/: person.rs  position.rs
columnar/tests/: derive_macro_test.rs
columnar_codegen/: Cargo.toml
columnar_codegen/builder/: Cargo.toml
columnar_codegen/codegen/: Cargo.toml
columnar_codegen/codegen/src/: attr.rs  columnar.rs  generate.rs  lib.rs  pathing.rs  simple.rs  streaming.rs
columnar_codegen/macro/: Cargo.toml
columnar_codegen/macro/src/: columar.rs  lib.rs  simple_columnar.rs
columnar_codegen/macros/: Cargo.toml
columnar_codegen/macros/src/: lib.rs
indexing/columnar/: Cargo.toml
indexing/columnar/src/: filtered_push.rs  lib.rs  simple.rs  stream.rs
indexing/columnar/src/buffers/: errors.rs  mod.rs
indexing/columnar/src/encoding/: delta.rs  mod.rs  streaming.rs
indexing/columnar/src/encoding/bitpack/v1/: common.rs  page_writer.rs  reader.rs  reader_pair.rs  writer.rs
indexing/columnar/src/encoding/iters/: num.rs
indexing/columnar/src/encoding/strings/: common.rs  doc_index.rs  doc_stream_writer.rs  mod.rs
indexing/columnar/src/indexing/: categorical.rs
indexing/columnar/src/models/: mod.rs  person.rs  position.rs
indexing/columnar_codegen/codegen/: Cargo.toml
indexing/columnar_codegen/macros/: Cargo.toml
indexing/toolkit/: Cargo.toml  test
(+24 files in other folders)
