[package]
name = "columnar"
version = "0.1.0"
edition = "2024"

[dependencies]
columnar_derive = { path = "../columnar_codegen/macros" }
serde = { version = "1", features = ["derive"] }
tempfile = "3.23.0"
fastbloom = "0.14.0"
zerocopy = "0.8.27"
zerocopy-derive = { version = "0.8.27" }
roaring = "0.11.2"


[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

[lib]
name = "columnar"
path = "src/lib.rs"

[build-dependencies]
columnar_codegen = { path = "../columnar_codegen/codegen" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"


[dev-dependencies]
tempfile = "3"
